<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ereinecke.eatsafe.MainActivity">
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="10"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sensitivities"
        android:orderInCategory="200"
        android:title="@string/action_sensitivities"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_off"
        android:orderInCategory="300"
        android:title="@string/action_about_off"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
