<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.ereinecke.eatsafe.ui.ResultsFragment"
    android:id="@+id/fragment_results"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|top" >

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:width="1dp"
        android:hint="@string/product_results_prompt"
        android:inputType="text"
        android:saveEnabled="true"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="2dp"
        android:contentDescription="@string/search"
        android:elevation="2dp"
        android:src="@android:drawable/ic_menu_search"
        android:tint="#333333"
        tools:ignore="RtlHardcoded" />


    <ListView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchText"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        tools:ignore="RtlHardcoded" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_nav_height"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorTabs"
        android:foregroundGravity="center_horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:alpha="0.7"
            android:contentDescription="@string/ads_content_description"
            android:foregroundGravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </android.support.v7.widget.Toolbar>
</RelativeLayout>