<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="@color/accent_material_light"
        android:contentDescription="@string/product_image"
        tools:ignore="PrivateResource" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:textAlignment="textStart">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:id="@+id/product_name"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold"
                tools:ignore="PrivateResource"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brands"
                android:id="@+id/brands"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                tools:ignore="PrivateResource"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                tools:ignore="PrivateResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labels"
                android:id="@+id/labels"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                tools:ignore="PrivateResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serving_size"
                android:id="@+id/serving_size"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/allergens"
                android:id="@+id/allergens"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                tools:ignore="PrivateResource"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredients"
                android:id="@+id/ingredients"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                tools:ignore="PrivateResource"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/origins"
                android:id="@+id/origins"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                tools:ignore="PrivateResource"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <TextView
                tools:ignore="PrivateResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode"
                android:id="@+id/code"
                android:textAlignment="textStart"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/barcode"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:phoneNumber="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40px" />

        </LinearLayout>        
    </ScrollView>
</LinearLayout>