<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:id="@+id/search_fragment"
    tools:context="com.ereinecke.eatsafe.ui.SearchFragment"
    android:clickable="false"
    tools:targetApi="n" >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:textAlignment="textStart"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingTop="60dp"
            android:paddingBottom="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/search_search_bar"
                android:layout_weight="1">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/barcode"
                    android:layout_gravity="center_horizontal"
                    android:imeOptions="actionSearch"
                    android:hint="@string/search_hint"
                    android:maxLength="13" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_button"
                    android:src="@android:drawable/ic_menu_search"
                    android:layout_gravity="end"
                    android:paddingTop="8dp"
                    android:tint="#333333"
                    android:contentDescription="@string/search"
                    android:background="@color/transparent" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_barcode"
                android:id="@+id/scan_button"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_below="@+id/search_search_bar"
                android:layout_centerHorizontal="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bottom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorTabs"
        android:layout_alignParentBottom="true"
        android:foregroundGravity="center_horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:alpha="0.5"
            android:contentDescription="Ads by Google"
            android:foregroundGravity="center_vertical|center_horizontal">
        </com.google.android.gms.ads.AdView>

    </android.support.v7.widget.Toolbar>

</RelativeLayout>